--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <nav class="navbar">
       <div id="logo"></div>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Perfil</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Experiencia</a></li>
+        <li><a href="#section-1">Home</a></li>
+        <li><a href="#section-2">Perfil</a></li>
+        <li><a href="#section-3">Skills</a></li>
+        <li><a href="#section-4">Experiencia</a></li>
       </ul>
   </nav>
   <div class="sample-header">
@@ -28,33 +28,72 @@
   </div>
   <div class="sample-section-wrap">
     <div class="sample-section">
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
-        quis, sem. Nulla consequat massa quis enim. </p>
-  
-      <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
-        vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-        ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-      </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-      </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-      </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-      </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-      </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-      </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-      </p>
+      <div id="section-1">
+        <h2>Seccion 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
+          quis, sem. Nulla consequat massa quis enim. </p>
+    
+        <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
+          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+          ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+      </div>
+      <div id="section-2">
+        <h2>Seccion 2</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+      </div>
+      <div id="section-3">
+        <h2>Seccion 3</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
+          quis, sem. Nulla consequat massa quis enim. </p>
+          
+        <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
+          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+          ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+      </div>
+      <div id="section-4">
+        <h2>Seccion 4</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
+        </p>
+      </div>
     </div>
   </div>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
