--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
     <title>Alejandro Aragon</title>
 </head>
 <body>
-  <nav class="navbar">
-      <div id="logo"></div>
-      <ul>
-        <li><a href="#section-1">Home</a></li>
-        <li><a href="#section-2">Perfil</a></li>
-        <li><a href="#section-3">Skills</a></li>
-        <li><a href="#section-4">Experiencia</a></li>
-      </ul>
+  <nav id="navbar">
+    <div id="logo" onclick="index()">
+      <img id="profile-img" class="lg-img" src="img/profile_portafolio.jpg" alt="">
+      <span>Alejandro Aragon</span>
+    </div>
+    <div id="navbar-right">
+      <a class="active" href="#section-2">Home</a>
+      <a href="#section-3">Contact</a>
+      <a href="#section-4">About</a>
+    </div>
   </nav>
-  <div class="sample-header">
-    <div class="sample-header-section">
-      <img src="img/profile_portafolio.jpg" alt="" height="165px" width="157px" style="border-radius: 60%;">
-      <h1>Alejandro Aragón</h1>
-    </div>        
+  <div class="header">
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div>
   </div>
   <div class="sample-section-wrap">
     <div class="sample-section">
-      <div id="section-1">
+      <div class="section" id="section-1">
         <h2>Seccion 1</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
           quis, sem. Nulla consequat massa quis enim. </p>
@@ -44,7 +45,7 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
         </p>
       </div>
-      <div id="section-2">
+      <div class="section" id="section-2">
         <h2>Seccion 2</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
@@ -62,7 +63,7 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
         </p>
       </div>
-      <div id="section-3">
+      <div class="section" id="section-3">
         <h2>Seccion 3</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
           quis, sem. Nulla consequat massa quis enim. </p>
@@ -77,7 +78,7 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
         </p>
       </div>
-      <div id="section-4">
+      <div class="section" id="section-4">
         <h2>Seccion 4</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
