--- a/index.html
+++ b/index.html
@@ -6,65 +6,132 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Roboto+Mono:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="img/battery.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Roboto+Mono:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/battery.png">
     <title>Alejandro Aragon</title>
 </head>
 <body>
+  <!-------------------------------------------- NAVBAR ---------------------------------------------------->
   <nav id="navbar">
     <div id="logo" onclick="index()">
       <img id="profile-img" class="lg-img" src="img/profile_portafolio.jpg" alt="">
       <span>Alejandro Aragon</span>
     </div>
     <div id="navbar-right">
-      <a class="active" href="#section-2">Home</a>
-      <a href="#section-3">Contact</a>
-      <a href="#section-4">About</a>
+      <a href="#about">Home</a>
+      <a href="#skills">Skills</a>
+      <a href="#exp">Experiencia</a>
+      <a href="#studies">Formacion</a>
     </div>
   </nav>
+  <!--------------------------------------- PROGRESS SCROLLER ---------------------------------------------->
   <div class="header">
     <div class="progress-container">
       <div class="progress-bar" id="myBar"></div>
     </div>
   </div>
+  <!------------------------------------------- CONTENT ---------------------------------------------------->
   <div class="sample-section-wrap">
     <div class="sample-section">
-      <div class="section" id="section-1">
-        <h2>Seccion 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
-          quis, sem. Nulla consequat massa quis enim. </p>
-    
-        <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
-          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-          ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-        </p>
+  <!-------------------------------------------- ABOUT ----------------------------------------------------->      
+      <div class="section" id="about">
+        <div class="container" style="padding: 25px 15px;">
+          <div class="about-text">
+            <h1>About me</h1>
+            <p>Soy un desarrollador fullstack.</p>
+            <p>Derrollo de API's con lenguajes estrictos y potenciales, frontend con tecnologías reconocidas por muchos desarroladores web.</p>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card">
+                <img src="img/about-me.jpg" alt="Aragon" style="width: 25%; border-radius: 10%; padding: 4px 15px;float: right;">
+                <div class="contenedor">
+                  <h2>Alejandro Aragón</h2>
+                  <p class="title">Desarrollador Fullstack</p>
+                  <p><span style="justify-content: center; color:white;" class="material-icons">email</span><a style="text-decoration: solid;" href="mailto:aragondru155@gmail.com">aragondru155@gmail.com</a></p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="section" id="section-2">
-        <h2>Seccion 2</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
-        </p>
+  <!-------------------------------------------- SKILLS ---------------------------------------------------->
+      <div class="section" id="skills">
+        <h2>Skills</h2>
+        <div class="container" style="padding: 15px;">
+          <div class="column middle">
+            <p>HTML</p>
+            <div class="progress">
+              <div class="skills html">90%</div>
+            </div>
+
+            <p>CSS</p>
+            <div class="progress">
+              <div class="skills css">80%</div>
+            </div>
+
+            <p>Node JS</p>
+            <div class="progress">
+              <div class="skills js">65%</div>
+            </div>
+
+            <p>Java</p>
+            <div class="progress">
+              <div class="skills java">80%</div>
+            </div>
+
+            <p>Oracle</p>
+            <div class="progress">
+              <div class="skills oracle">65%</div>
+            </div>
+            <p>MySql</p>
+            <div class="progress">
+              <div class="skills mysql">90%</div>
+            </div>
+          </div>
+          <div class="column middle" style="float: right;">
+            <p>Angular</p>
+            <div class="progress">
+              <div class="skills angular">60%</div>
+            </div>
+
+            <p>VueJs</p>
+            <div class="progress">
+              <div class="skills vue">60%</div>
+            </div>
+
+            <p>linux</p>
+            <div class="progress">
+              <div class="skills linux">70%</div>
+            </div>
+
+            <p>React</p>
+            <div class="progress">
+              <div class="skills react">55%</div>
+            </div>
+
+            <p>Python</p>
+            <div class="progress">
+              <div class="skills python">70%</div>
+            </div>
+
+            <p>Pentaho</p>
+            <div class="progress">
+              <div class="skills pentaho">60%</div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="section" id="section-3">
-        <h2>Seccion 3</h2>
+      <br>
+      <br>
+      <br>
+      <br>
+  <!---------------------------------------------- EXP ---------------------------------------------------->
+      <div class="section" id="exp">
+        <h2>Exp</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
           quis, sem. Nulla consequat massa quis enim. </p>
           
@@ -78,8 +145,9 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
         </p>
       </div>
-      <div class="section" id="section-4">
-        <h2>Seccion 4</h2>
+  <!--------------------------------------------- STUDIES ------------------------------------------------->
+      <div class="section" id="studies">
+        <h2>Formación</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda inventore, quidem qui corrupti quam maxime placeat, molestias libero quas recusandae velit quis eaque! Cumque voluptatem corporis repellat, libero temporibus eum?
         </p>
