modal de contacto, 45%

--- a/index.html
+++ b/index.html
@@ -49,13 +49,31 @@
                 <img src="img/about-me.jpg" alt="Aragon" style="width: 25%; border-radius: 10%; padding: 4px 15px;float: right;">
                 <div class="contenedor">
                   <h2>Alejandro Aragón</h2>
-                  <p class="title">Desarrollador Fullstack</p>
-                  <p><span style="justify-content: center; color:white;" class="material-icons">email</span><a style="text-decoration: solid;" href="mailto:aragondru155@gmail.com">aragondru155@gmail.com</a></p>
-                  <p><button class="button">Contact</button></p>
+                  <div class="title" style="display: flex; align-items: center;"><span class="material-icons" style="color:white;padding-right: 4px;">api</span> Desarrollador Fullstack</div>
+                  <br>
+                  <div style="display: flex; align-items: center;"><span style="color:white;padding-right: 6px;" class="material-icons">email</span> <a style="text-decoration: solid;" href="mailto:aragondru155@gmail.com">aragondru155@gmail.com</a></div>
+                  <p><button id="myBtn" class="button">Contact</button></p>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <div class="modal-header">
+              <span class="close">&times;</span>
+              <h2>Modal Header</h2>
+            </div>
+            <div class="modal-body">
+              <p>Some text in the Modal Body</p>
+              <p>Some other text...</p>
+            </div>
+            <div class="modal-footer">
+              <h3>Modal Footer</h3>
+            </div>
+          </div>
+
         </div>
       </div>
   <!-------------------------------------------- SKILLS ---------------------------------------------------->
